fix(AN-1050): source report spacing

--- a/src/app/modules/user/views/sources/sources.component.scss
+++ b/src/app/modules/user/views/sources/sources.component.scss
@@ -5,9 +5,13 @@
   width: 100%;
   height: 100%;
 
-  /deep/ {
+  ::ng-deep {
     .kChartContainer {
       padding: 10px 24px !important;
+
+      .kTable {
+        min-height: auto !important;
+      }
     }
 
     .kLabel {
@@ -17,6 +21,10 @@
 
     .kTrend {
       width: 10%;
+    }
+
+    .kCustomLegend {
+      margin: 8px 0 12px !important;
     }
   }
 }
@@ -40,5 +48,9 @@
 
 .kTitle {
   width: auto !important;
-  padding-right: 0px !important;
+  padding-right: 0 !important;
+}
+
+.kFilters {
+  height: 64px !important;
 }
